# 24fps-coverter

./: .gitignore  README.md  about.html  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: headless.rs  lib.rs  main.rs  single_instance.rs  utils.rs
src-tauri/src/context_menu/: mod.rs
src-tauri/src/converter/: command_builder.rs  encoder.rs  ffmpeg.rs  mod.rs
src/styles/: main.css
